# aoc-2025-c

./: LICENSE  README.md
Day_01/Problem_1/: main.c
Day_01/Problem_1/include/: problem_1.h
Day_01/Problem_2/: CMakeLists.txt  main.c
Day_01/Problem_2/include/: problem_2.h
Day_01/Problem_2/src/: problem_2.c
Day_02/Problem_1/: CMakeLists.txt  main.c
Day_02/Problem_1/include/: problem_1.h
Day_02/Problem_1/src/: problem_1.c
Day_02/Problem_2/: main.c
Day_02/Problem_2/include/: problem_2.h
Day_02/Problem_2/src/: problem_2.c
Day_03/Problem_1/: main.c
Day_03/Problem_1/include/: problem_1.h
Day_03/Problem_1/src/: problem_1.c
